tests/NormalTests/paczka2/big_fuzzy/75841778.err
Error in line 8: 4Cg0AjXb A705 2,6
Error in line 11: gZiBsU S236 45,3
Error in line 23: gZiBsU A569 311,6
Error in line 31: gZiBsU A569 52,7
Error in line 37: gZiBsU A569 59,6
Error in line 38: GgY A569 78,3
Error in line 44: A569 S236 78,8
Error in line 48: A569 A705 44,3
Error in line 41: GgY S236 77,6
Error in line 53: vuFeX S236 78,3
Error in line 52: GgY A705 18,4
Error in line 49: A569 A569 68,1
Error in line 62: gZiBsU S539 47,4
Error in line 68: vuFeX S236 31,4
Error in line 72: GgY A705 3,3
Error in line 82: 4Cg0AjXb S236 25,7
Error in line 92: 4Cg0AjXb A569 13,7
Error in line 93: GgY A569 62,3
Error in line 99: GgY A705 -3,6
Error in line 98: GgY A705 59,0
Error in line 87: A569 A705 72,8
Error in line 113: vrftRzanD3 S539 -6,8
Error in line 97: gZiBsU A569 97,5
Error in line 107: CSoYMBkzdWg A569 67,0
Error in line 116: A569 S539 70,7
Error in line 128: CSoYMBkzdWg A569 22,0
Error in line 138: GgY A705 40,8
Error in line 139: GgY A569 5,4
Error in line 151: GgY A569 96,5
Error in line 157: gZiBsU S539 32,0
Error in line 162: vrftRzanD3 A705 15,8
Error in line 167: 4Cg0AjXb S236 16,6
Error in line 170: 4Cg0AjXb S539 41,5
Error in line 185: vuFeX S236 7,9
Error in line 197: CSoYMBkzdWg A569 212,2
Error in line 199: vuFeX A569 94,6
Error in line 201: A569 S539 70,2
Error in line 210: A569 A705 16,5
Error in line 215: vuFeX S236 -6,7
Error in line 190: vrftRzanD3 A705 29,2
Error in line 200: vuFeX S236 88,8
Error in line 214: CSoYMBkzdWg S236 74,0
Error in line 224: vuFeX A569 38,7
Error in line 212: A569 A569 81,0
Error in line 225: GgY A569 388,2
Error in line 227: vuFeX S236 22,4
Error in line 229: GgY S236 0,8
Error in line 230: CSoYMBkzdWg S236 91,8
Error in line 231: vuFeX A569 6,5
Error in line 240: vuFeX S236 60,9
Error in line 235: 4Cg0AjXb S236 24,4
Error in line 250: vrftRza{D3 S236 47,5
